@startuml
hide circle
scale 1.5
skinparam linetype ortho
skinparam monochrome true
left to right direction

entity "admins" as admin { }

entity "hosts" as host { }

entity "pings" as ping { }

entity "icmps" as icmp { }

entity "stats" as stat { }

ping ||--|{ icmp : dispara
ping ||--|| stat : possui
host ||--|{ ping : possui
host }|--|{ admin : possui
@enduml
